--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             <div class="container">
             
             <div><h1>Эффективные решения для вашего бизнеса</h1></div>
-           <div><a class="link-active-service" href="Заказать-услугу">Заказать услугу</a></div>
+           <div class="section-biss"><a class="link-active-service" href="Заказать-услугу">Заказать услугу</a></div>
         
         </div>
 
