--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>HomeWork</title>
+    <link
+    href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=fallback"
+    rel="stylesheet"
+  />
     <link rel="stylesheet" href="./css/styles.css" />
      <link lang="en" rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/0.7.0/modern-normalize.min.css">
   </head>
@@ -12,13 +16,12 @@
     <header class="haed-hero">
         <div class="container main-div">
         <nav class="nav-header">
-          <a href="./portfolio.html" class="logo">
-            <img src="./images/logo.svg" alt="логотип" /></a>
+              <span class="logo">Web</span><span class="logotip">Studio</span>
 
          <ul class="site-nav">
-             <li class="iteam-header"><a class="link-active-styles" href="Студия">Студия</a></li>
-             <li class="iteam-header"><a class="link" href="">Портфолио</a></li>   
-             <li class="iteam-header"><a class="link" href="">Контакты</a></li>   
+             <li class="iteam-header"><a class="link-active-styles" href="">Студия</a></li>
+             <li class="iteam-header"><a class="link-active-styles" href="./portfolio.html">Портфолио</a></li>   
+             <li class="iteam-header"><a class="link-active-styles" href="">Контакты</a></li>   
          </ul>
         </nav>
          <ul class="auth-nav">
@@ -143,3 +146,8 @@
     
   </body>  
 </html>
+
+
+  
+    
+ 
