--- a/portfolio.html
+++ b/portfolio.html
@@ -19,7 +19,7 @@
             <span class="logo">Web</span><span class="logotip">Studio</span>
             <ul class="site-nav">
                     <li class="iteam-header"><a class="link-active-styles" href="./index.html">Студия</a></li>
-                    <li class="iteam-header"><a class="link-active-styles" href="">Портфолио</a></li>
+                    <li class="iteam-header"><a class="link-active-styles current" href="">Портфолио</a></li>
                     <li class="iteam-header"><a class="link-active-styles" href="">Контакты</a></li>
                 </ul>
               
@@ -141,9 +141,11 @@
             <a href="./index.html">
                 <img src="./images/logo.svg" alt="логотип" /></a>
          <address>
-            г. Киев, пр-т Леси Украинки, 26
-             <a class="link-mail" href="mailto:info@example.com">info@example.com</a>
-             <a class="link-tel" href="tel:+380991111111">+38 099 111 11 11</a>
+          <ul class="adress-ul">
+            <li class="siti"> г. Киев, пр-т Леси Украинки, 26</li>
+             <li><a class="link-mail" href="mailto:info@devstudio.com">info@devstudio.com</a> </li>
+             <li><a class="link-tel" href="tel:+380961111111">+38 096 111 11 11</a></li>
+         </ul>
          </address>
          </div>
      </footer>
