--- a/portfolio.html
+++ b/portfolio.html
@@ -138,8 +138,8 @@
      <!--конец-->
      <footer class="footer-contentc">
         <div class="container">
-            <a href="./index.html">
-                <img src="./images/logo.svg" alt="логотип" /></a>
+          <a href="./" lang="en" class="logo">Web<span class="logo-white">Studio</span>
+            <address>
          <address>
           <ul class="adress-ul">
             <li class="siti"> г. Киев, пр-т Леси Украинки, 26</li>
