--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
             <div><h2>Наша команда</h2></div>
             <ul class="team-section">
                 <li  class="img-team">
-                    <div>
+                    <div class="img-team-iteam">
                     <img src="./images/human2.jpg" width="270" alt="Photo"/>
                 
                          <h3 class="link-title-developer">Ольга Репина</h3>
@@ -104,21 +104,21 @@
                         </div>
                 </li>        
                 <li  class="img-team">
-                    <div>
+                    <div class="img-team-iteam">
                     <img src="./images/human3.jpg" width="270" alt="Photo"/>
                         <h3 class="link-title-marketing">Николай Тарасов</h3>   
                         <p class="link-title-mark">Marketing</p> 
                         </div>  
                 </li>        
                 <li  class="img-team">
-                    <div>
+                    <div class="img-team-iteam">
                     <img src="./images/human.jpg" width="270" alt="Photo"/>
                         <h3 class="link-title-product">Игорь Демьяненко</h3>       
                         <p class="link-title-des">Product Designer</p>
                         </div>
                 </li>       
                 <li  class="img-team">
-                    <div>
+                    <div class="img-team-iteam">
                     <img src="./images/human4.jpg" width="270" alt="Photo"/>
                         <h3 class="link-title-desinger">Михаил Ермаков</h3>  
                         <p class="link-title-ui">UI Designer</p>
