--- a/portfolio.html
+++ b/portfolio.html
@@ -26,7 +26,7 @@
           </nav>
                 <ul class="auth-nav">
                     <li class="iteam-header"><a class="link-mail" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-                    <li class="iteam-header"><a class="link-tel" href="tel:+380961111111">+380961111111</a></li>
+                    <li class="iteam-header"><a class="link-tel" href="tel:+380961111111">+38 096 111 11 11</a></li>
                 </ul>  
             </div>  
     </header>
@@ -140,11 +140,15 @@
         <div class="container">
           <a href="./" lang="en" class="logo">Web<span class="logo-white">Studio</span>
             <address>
-         <address>
+       
           <ul class="adress-ul">
             <li class="siti"> г. Киев, пр-т Леси Украинки, 26</li>
-             <li><a class="link-mail" href="mailto:info@devstudio.com">info@devstudio.com</a> </li>
-             <li><a class="link-tel" href="tel:+380961111111">+38 096 111 11 11</a></li>
+             <li>
+               <a class="link-mail" href="mailto:info@devstudio.com">info@devstudio.com</a> 
+            </li>
+             <li>
+               <a class="link-tel" href="tel:+380961111111">+38 096 111 11 11</a>
+            </li>
          </ul>
          </address>
          </div>
