--- a/portfolio.html
+++ b/portfolio.html
@@ -15,15 +15,14 @@
     <!--шапка-2-->
     <header class="head-hero">
         <div class="container  main-div">
-        <nav class="nav-header">
-          <div class="div-head">  
-             <span class="logo">Web</span><span class="logotip">Studio</span>
-            </div>
+          <div class="div-head"> 
+            <a href="#"  class="logo">Web<span class="logotip">Studio</span></a>    
+   </div>
          
             <ul class="site-nav">
                     <li class="iteam-header"><a class="link-active-styles" href="./index.html">Студия</a></li>
-                    <li class="iteam-header"><a class="link-active-styles current" href="">Портфолио</a></li>
-                    <li class="iteam-header"><a class="link-active-styles" href="">Контакты</a></li>
+                    <li class="iteam-header"><a class="link-active-styles current" href="#">Портфолио</a></li>
+                    <li class="iteam-header"><a class="link-active-styles" href="#">Контакты</a></li>
                 </ul>
               
           </nav>
