--- a/index.html
+++ b/index.html
@@ -17,14 +17,14 @@
         <div class="container main-div">
         <nav class="nav-header">
             <div class="div-head"> 
-                 <a href="./" lang="en" class="logo">Web<span class="logotip">Studio</span></a>    
+                 <a href="#"  class="logo">Web<span class="logotip">Studio</span></a>    
         </div>
           
 
          <ul class="site-nav">
-             <li class="iteam-header"><a class="link-active-styles current" href="">Студия</a></li>
+             <li class="iteam-header"><a class="link-active-styles current" href="#">Студия</a></li>
              <li class="iteam-header"><a class="link-active-styles" href="./portfolio.html">Портфолио</a></li>   
-             <li class="iteam-header"><a class="link-active-styles" href="">Контакты</a></li>   
+             <li class="iteam-header"><a class="link-active-styles" href="#">Контакты</a></li>   
          </ul>
         </nav>
          <ul class="auth-nav">
@@ -142,7 +142,7 @@
                     <ul class="adress-ul">
                         <li class="siti"> г. Киев, пр-т Леси Украинки, 26</li>
                          <li class="way"><a class="link-mail" href="mailto:info@devstudio.com">info@devstudio.com</a> </li>
-                         <li><a class="link-tel" href="tel:+380961111111">+38 096 111 11 11</a></li>
+                         <li class="way"><a class="link-tel" href="tel:+380961111111">+38 096 111 11 11</a></li>
                      </ul>
                  </address>
                  
