--- a/portfolio.html
+++ b/portfolio.html
@@ -15,9 +15,9 @@
     <!--шапка-2-->
     <header class="head-hero">
         <div class="container  main-div">
-          <div class="div-head"> 
-            <a href="#"  class="logo">Web<span class="logotip">Studio</span></a>    
-   </div>
+        
+          <a href="#"  class="logo-head">Web<span class="logotip">Studio</span></a>      
+   
          
             <ul class="site-nav">
                     <li class="iteam-header"><a class="link-active-styles" href="./index.html">Студия</a></li>
@@ -109,7 +109,7 @@
                         <div>        
                        <a href="./images/monitor.jpg"><img src="./images/monitor.jpg"   width="370" alt="монитор"/></a>
                        <div class="title-portgolio">
-                                <h3 class="h-portofolio">monitor</h3>  
+                                <h3 class="h-portofolio">Inspiration has no Borders</h3>  
                               <p class="link-title">Веб-сайт</p>
                               </div>
                           </div>
