--- a/index.html
+++ b/index.html
@@ -158,8 +158,11 @@
         <footer class="footer-contentc">
             <div class="container">
                
-                <div class="fot-div">
-                    <a href="./" lang="en" class="logo">Web<span class="logo-white">Studio</span>
+                <div>
+                    <a href="#"  class="logo">
+                        Web
+                        <span class="logo-white">Studio</span>
+                    </a>    
                   </div>
                  <address>
                     <ul class="adress-ul">
